# Pong

./: .gitignore  CMakeLists.txt  README.md
includes/: Ball.h  Defender.h  DefenderAi.h
scr/: Ball.cpp  Defender.cpp  DefenderAi.cpp  main.cpp
